k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
  labels:
    app: ui-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui-service
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      containers:
      - name: ui-service
        image: asia-south1-docker.pkg.dev/citric-kit-489316-g6/kalaiartifactrepo15/ui-service:latest
        ports:
        - containerPort: 5000
        resources:
            requests:
              cpu: "50m"
            limits:
              cpu: "300m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: LoadBalancer
  selector:
    app: ui-service
  ports:
    - port: 80
      targetPort: 5000
